novas-paginas-e-estilos

--- a/primeiraPage.html
+++ b/primeiraPage.html
@@ -10,19 +10,34 @@
 </head>
 
 <body>
-            <section class="menu menu2 js-menu">
-                <ul>
-                    <button><li><a href="http://127.0.0.1:5502/">SERVIÇOS</a></li></button>
-                    <button><li><a href="http://127.0.0.1:5502/">FAQ</a></li></button>
-                    <button><li><a href="http://127.0.0.1:5502/">CONTATO</a></li></button>
-                    <button><li><a href="http://127.0.0.1:5502/">PROMOÇÃO DO DIA →</a> </li></button>
-                </ul>
-            </section>
+    <section class="menu menu2 ">
+        <ul>
+            <button>
+                <li><a href="http://127.0.0.1:5502/">Venha conhecer melhor a Barbearia GAP</a></li>
+            </button>
+        </ul>
+    </section>
 
-            <div class="h1inicio">
-                <h2>Uma nova experiência em barbearia</h2>
-                <p>Experimente mudar totalmente sua maneira de ir ao barbeiro com inovação,
-                 bom atendimento e com certeza, muito estilo</p>
-                <button> <img src="wpp.png" alt=""> AGENDAR HORÁRIO</button>
+    <div class="container">
+        <button class="arrow-left control" aria-label="previous image">◄</button>
+        <button class="arrow-right control" aria-label="next image">►</button>
+        <div class="gallery-wrapper">
+            <div class="gallery">
+                <img src="img1.jpg" alt="" class="item current-item">
+                <img src="img2.jpg" alt="" class="item current-item">
+                <img src="img3.jpg" alt="" class="item current-item">
+                <img src="img4.jpg" alt="" class="item current-item">
+                <img src="img5.jpg" alt="" class="item current-item">
             </div>
-</body>            
+        </div>
+    </div>
+
+    <div class="h1inicio">
+        <h2>Uma nova experiência em barbearia</h2>
+        <p>Experimente mudar totalmente sua maneira de ir ao barbeiro com inovação,
+            bom atendimento e com certeza, muito estilo</p>
+        <button> <img src="wpp.png" alt=""> AGENDAR HORÁRIO</button>
+    </div>
+
+    <script src="script01.js"></script>
+</body>
