page-de-fornulario

--- a/primeiraPage.html
+++ b/primeiraPage.html
@@ -13,7 +13,7 @@
     <section class="menu menu2 ">
         <ul>
             <button>
-                <li><a href="http://127.0.0.1:5502/">Venha conhecer melhor a Barbearia GAP</a></li>
+                <li><a href="http://127.0.0.1:5502/segundaPage.html">Venha conhecer melhor a Barbearia GAP</a></li>
             </button>
         </ul>
     </section>
@@ -36,7 +36,7 @@
         <h2>Uma nova experiência em barbearia</h2>
         <p>Experimente mudar totalmente sua maneira de ir ao barbeiro com inovação,
             bom atendimento e com certeza, muito estilo</p>
-        <button> <img src="wpp.png" alt=""> AGENDAR HORÁRIO</button>
+        <button> <img src="wpp.png" alt=""><li><a href="http://127.0.0.1:5502/terceiraPage.html">Agendar Horário</a></li></button>
     </div>
 
     <script src="script01.js"></script>
